<resources>
    <string name="app_name">RouterMobile</string>
    <string name="title_activity_main">Street Router</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--menu-->
    <string name="nav_item_help">Trợ giúp</string>
    <string name="nav_item_reference">Thảm khảo tuyến xe bus</string>
    <string name="nav_item_setting">Tùy chỉnh</string>
    <string name="nav_item_history">Quản lý lịch sử tìm kiếm</string>
    <string name="nav_item_change_ip">Tùy chỉnh IP và Port</string>
    <string name="nav_item_close_service">Tắt dịch vụ</string>
    <string name="nav_item_developer">Tùy chọn cho nhà phát triển</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="bus">43 phÃºt</string>
    <string name="motorbike">65 phÃºt</string>
    <string name="map">Báº£n Ä‘á»“</string>
    <string name="google_api_key">AIzaSyDQAnDaneVMCW_k_yxhUCZp6EIbw0PLb5A</string>


    //Connect to wear
    <string name="received_message1">Received message 1.</string>
    <string name="received_message2">Received message 2.</string>
    <string name="received_messages">Received messages:</string>
    <string name="send_message1">Send message 1</string>
    <string name="send_message2">Send message 2</string>
    <string name="peer_connected">Peer connected.</string>
    <string name="peer_disconnected">Peer disconnected.</string>
    <string name="message1_sent">Message 1 sent.</string>
    <string name="error_message1">Error sending message 1.</string>
    <string name="message2_sent">Message 2 sent.</string>
    <string name="error_message2">Error sending message 2.</string>
    <string name="wearable_api_unavailable">Wearable API is unavailable.</string>
    <string name="title_activity_fuck">FuckActivity</string>
    <string name="title_activity_search_detail">SearchDetailActivity</string>

    <string-array name="bus_sort_type">
        <item>Lượt xe buýt</item>
        <item>Thời gian</item>
        <item>Khoảng cách</item>
    </string-array>

    <string-array name="motor_sort_type">
        <item>Thời gian</item>
        <item>Khoảng cách</item>
    </string-array>

    <string-array name="stimulate_route_type">
        <item>Không mô phỏng</item>
        <item>Mô phỏng</item>
        <item>Mô phỏng đường sai</item>
    </string-array>

    <string-array name="transfer_turn_arrays">
        <item>1 lượt</item>
        <item>2 lượt</item>
        <item>3 lượt</item>
    </string-array>
    <string name="title_activity_nutiteq_map">NutiteqMapActivity</string>

</resources>
